# opencv-test

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  FindLib.cmake  main.cpp  top_level_path.h.in  vcpkg-configuration.json
src/: CMakeLists.txt  annotate.cpp  blob_detection.cpp  contour_detection.cpp  convolution.cpp  edge_detection.cpp  intro.cpp  mouse.cpp  resize_scroll.cpp  threshold.cpp  top_level_path.h.in  video.cpp
